# findmy

./: README.md  pyproject.toml
.github/workflows/: ci.yml
find/: __init__.py  cli.py  embedder.py  indexer.py
findmy/: chunker.py  cli.py  config.py  crawler.py  indexer.py  store.py
tests/: test_chunker.py  test_cli.py  test_crawler.py  test_store.py
