[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "find"
version = "0.1.0"
description = "Natural language search across your local files — runs entirely on your machine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gnomecromancer" }]
keywords = ["search", "semantic", "embeddings", "local", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "numpy>=1.24",
]

[project.scripts]
semfind = "find.cli:main"

[project.urls]
Homepage = "https://github.com/Gnomecromancer/find"
Repository = "https://github.com/Gnomecromancer/find"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["find"]
